Expand the information in the status call
